# pysmiles

./: .pylintrc  Makefile  README.md  pyproject.toml
pysmiles/: __init__.py  read_smiles.py  smiles_helper.py  testhelper.py  write_smiles.py
tests/: conftest.py  test_hypothesis.py  test_read_smiles.py  test_smiles_helpers.py  test_write_smiles.py  testhelper.py
