[tool.poetry]
name = "pysmiles"
version = "0.1.0"
description = "A SMILES reader and writer"
authors = ["Peter C Kroon <p.c.kroon@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.1"
ruff = "^0.1"
pylint = "^3.0"
mypy = "^1.5"
deptry = "^0.12"
hypothesis = "^6.82"
types-networkx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
